fix(hero-section): adjust layout with centered alignment and margin for header height

--- a/src/app/components/landing/organism/hero-section/hero-section.css
+++ b/src/app/components/landing/organism/hero-section/hero-section.css
@@ -3,9 +3,11 @@
 }
 
 .hero {
+  margin-top: var(--header-height-landing);
   min-height: calc(100vh - var(--header-height-landing));
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
 }
 
